<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.peach</groupId>
    <artifactId>peach-cloud</artifactId>
    <version>${revision}</version>
    <name>peach-cloud</name>
    <description>peach-cloud</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
        <revision>1.0.0-SNAPSHOT</revision>
        <project.profile>dev</project.profile>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <flatten-maven-plugin.version>1.7.2</flatten-maven-plugin.version>
        <maven-clean-plugin.version>3.4.1</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
        <lombok.version>1.18.36</lombok.version>
        <node.executable>node</node.executable>
        <spring.boot>3.5.4</spring.boot>
        <swagger-anno.version>2.2.35</swagger-anno.version>
    </properties>

    <modules>
        <module>peach-dependencies</module>
        <module>peach-monitor</module>
        <module>peach-gateway</module>
        <module>peach-fileservice</module>
        <module>peach-auth</module>
        <module>peach-common</module>
        <module>peach-component</module>
        <module>peach-middleware</module>
        <module>peach-sample</module>
        <module>peach-message</module>
        <module>peach-setting</module>
        <module>peach-generator</module>
        <module>peach-scheduled</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.peach</groupId>
                <artifactId>peach-dependencies</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>development</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <project.profile>dev</project.profile>
            </properties>
        </profile>
        <profile>
            <id>production</id>
            <properties>
                <project.profile>prod</project.profile>
            </properties>
        </profile>
        <profile>
            <id>docker</id>
            <properties>
                <project.profile>docker</project.profile>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <project.profile>test</project.profile>
            </properties>
        </profile>
    </profiles>

    <build>
        <resources>
            <!-- 处理非字体文件，启用过滤 -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.ttf</exclude>
                    <exclude>**/*.woff</exclude>
                    <exclude>**/*.woff2</exclude>
                    <exclude>**/*.eot</exclude>
                    <exclude>**/*.otf</exclude>
                    <exclude>**/*.png</exclude>
                    <exclude>**/*.jpg</exclude>
                    <exclude>**/*.jpeg</exclude>
                    <exclude>**/*.gif</exclude>
                    <exclude>**/*.ico</exclude>
                </excludes>
            </resource>
            <!-- 处理字体文件，不启用过滤 -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/*.ttf</include>
                    <include>**/*.woff</include>
                    <include>**/*.woff2</include>
                    <include>**/*.eot</include>
                    <include>**/*.otf</include>
                </includes>
            </resource>
        </resources>
        <!-- 1. 插件版本与全局配置管理 -->
        <pluginManagement>
            <plugins>
                <!-- 核心：Spring Boot 打包插件 -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- 核心：编译插件 (解决编码和参数名问题) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <parameters>true</parameters>
                        <compilerArgs>
                            <arg>-J-Dfile.encoding=UTF-8</arg>
                            <arg>-J-Dsun.jnu.encoding=UTF-8</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- 单元测试插件 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>

                <!-- 源码打包插件 (建议加上，方便调试) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                    <configuration>
                        <useDefaultDelimiters>false</useDefaultDelimiters>
                        <delimiters>
                            <delimiter>@</delimiter>
                        </delimiters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <!-- 2. 全局生效的插件 (所有模块都会自动继承) -->
        <plugins>
            <!-- 仓库文本统一使用严格 UTF-8 且不允许 BOM。 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>check-utf8-without-bom</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${node.executable}</executable>
                            <workingDirectory>${maven.multiModuleProjectDirectory}</workingDirectory>
                            <arguments>
                                <argument>scripts/check-utf8.mjs</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- 编译插件：所有模块都需要编译 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <propertiesEncoding>UTF-8</propertiesEncoding>
                </configuration>
            </plugin>

            <!-- 版本扁平化：解决 ${revision} 问题 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <!-- 只在必要时更新（推荐） -->
                    <updatePomFile>true</updatePomFile>
                    <!-- 选择合适的模式 -->
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- clean 时删除 -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${basedir}</directory>
                            <includes>
                                <include>.flattened-pom.xml</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
